# suture-ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/commands/: audit-check.md  eval.md  migrate.md  new-extraction-case.md  verify-tenant.md
apps/api/: .env.example  CLAUDE.md  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_core_tables.py  0002_full_schema.py  0003_payer_rule_embedding_1024.py  0004_document_inbox_fields.py  0004_payer_rule_denial_reasons.py  0005_payer_rule_denial_reasons.py  0006_discharge_confirmation_fax_path.py  0006_encrypt_call_transcript.py  0007_encrypt_call_transcript.py
apps/api/app/: __init__.py  config.py  database.py  dependencies.py  main.py  middleware.py
apps/api/app/models/: __init__.py  ai_invocation.py  appointment.py  audit_log.py  base.py  call.py  clinic.py  clinic_membership.py  discharge_summary.py  document.py  document_extraction.py  eval_run.py  fax.py  insurance_policy.py  outreach_attempt.py  patient.py  payer_rule.py  prior_auth.py  provider.py  referral.py  referral_task.py  user.py  workflow_run.py
apps/api/app/routers/: analytics.py  appointments.py  auth.py  clinic.py  discharges.py  documents.py  evals.py  extractions.py  health.py  outreach.py  patients.py  prior_auth.py  referrals.py  scheduling.py  tasks.py  voice.py
apps/api/app/schemas/: analytics.py  auth.py  clinic.py  document.py  eval.py  extraction.py  outreach.py  patients.py  prior_auth.py  scheduling.py  tasks.py  voice.py  workflow.py
apps/api/app/services/: auth.py  classification.py  document_storage.py  ocr.py
apps/api/app/services/analytics/: __init__.py  leakage.py  payer_friction.py  referral_quality.py  roi.py
apps/api/app/services/discharge/: confirmation.py  confirmation_pdf.py
apps/api/app/services/embedding/: __init__.py  base.py  factory.py  ollama.py
apps/api/app/services/extraction/: __init__.py  confidence.py  resolvers.py  service.py  validators.py
apps/api/app/services/fax/: base.py  factory.py  stub.py
apps/api/app/services/llm/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py  pricing.py
apps/api/app/services/outreach/: __init__.py  backfill.py  base.py  cadence.py  email.py  factory.py  livekit.py  orchestrator.py  scheduling.py  sms.py  stub.py  templates.py  voice.py
apps/api/app/services/prior_auth/: __init__.py  appeal.py  determine.py  ingestion.py  packet.py  pdf_styles.py  seeds.py
apps/api/app/services/voice/: __init__.py  agent.py  guardrails.py  livekit_client.py  stt.py  transcript_bus.py  tts.py
apps/api/app/services/workflow/: sla.py  state_machine.py  templates.py  timeline.py
apps/api/app/utils/: audit.py  context.py  encryption.py  logging.py  security.py
apps/api/scripts/: ingest_payer_rules.py
apps/api/tests/: _doc_helpers.py  analytics_helpers.py  conftest.py  prior_auth_helpers.py  test_ai_invocation_logged.py  test_analytics_endpoints.py  test_audit_log.py  test_auth.py  test_auth_determination.py  test_auth_packet_generation.py  test_auth_tenant_binding.py  test_call_lifecycle.py  test_call_transcript_encrypted.py  test_clinic_settings.py  test_confirmation_fax.py  test_denial_appeal.py  test_discharge_e2e.py  test_discharge_endpoints.py  test_document_classification.py  test_document_detail.py  test_document_list.py  test_document_upload.py  test_embedding_provider.py  test_eval_harness.py  test_evals_api.py  test_extraction_confidence.py  test_extraction_resolvers.py  test_extraction_review.py  test_extraction_service.py  test_fax_provider.py  test_health.py  test_jwt_security.py  test_leakage_scoring.py  test_livekit_client.py  test_llm_pricing.py  test_llm_provider.py  test_llm_stream.py  test_logging_phi_safe.py  test_migration.py  test_outreach_cadence.py  (+48 more)
docs/: ARCHITECTURE.md  DEMO.md  EVAL.md  SECURITY.md
infra/: docker-compose.obs.yml  docker-compose.yml  init.sql  livekit.yaml  prometheus.yml
scripts/: verify_gate_0.sh  verify_gate_a.sh  verify_gate_c.sh  verify_synthetic.sh
seeds/: .env.example
services/voice-agent/: CLAUDE.md  README.md  pyproject.toml
services/voice-agent/ember/: __init__.py  __main__.py  transcript_bus.py  worker.py
(+268 files in other folders)
