[project]
name = "suture-api"
version = "0.1.0"
description = "Suture FastAPI backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "celery>=5.4.0",
    "redis>=5.1.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "cryptography>=43.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    "email-validator>=2.3.0",
    "pgvector>=0.4.2",
    "docling>=2.0.0",
    "aiofiles>=24.1.0",
    "pypdf>=4.3.0",
    # Voice (Module 6 / Ember). The STT/TTS wrappers live under
    # app/services/voice/ so the existing pytest harness can exercise them;
    # the voice-agent worker process re-imports them via an editable path
    # dep. livekit-api covers token mint + room CRUD.
    "livekit-api>=1.0.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-passlib",
    "faker>=30.0.0",
    "reportlab>=4.2.0",
    "Pillow>=10.4.0",
    "anthropic>=0.40.0",
    "jsonschema>=4.23.0",
    "types-aiofiles>=24.1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line-too-long handled by formatter
    "B008",  # FastAPI uses `Depends(...)` in argument defaults — that's the pattern
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = false
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "faster_whisper.*", "piper.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers -m 'not slow'"
markers = [
    "slow: integration tests that download models or hit external services; skipped by default, run via `pytest -m slow` or `make eval-voice`",
]
