[project]
name = "suture-voice-agent"
version = "0.1.0"
description = "Ember — Suture's LiveKit voice agent worker"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    # LiveKit Agents framework + plugins. The openai plugin is what we use
    # to bridge to local Ollama via the OpenAI-compatible chat completions
    # API — see CLAUDE.md / ADR 007.
    "livekit-agents>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-openai>=1.0.0",
    # API package brought in editable so the worker can reuse the
    # SQLAlchemy models, encryption, and ContextVar plumbing.
    "suture-api",
    "redis>=5.1.0",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.uv.sources]
suture-api = { path = "../../apps/api", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
